first draft of value iteration

--- a/assignment1/value_iteration.ipynb
+++ b/assignment1/value_iteration.ipynb
@@ -19,7 +19,8 @@
    "outputs": [],
    "source": [
     "from typing import Tuple, List\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import copy"
    ]
   },
   {
@@ -46,20 +47,27 @@
     "        self.discount = discount\n",
     "        self.threshold = threshold\n",
     "    \n",
-    "    def _calc_new_value(self):\n",
-    "        ...\n",
+    "    def _calc_action_value(self, action, other_actions):\n",
+    "        \"\"\"\"\"\"\n",
+    "        total_value = self.noise * (self.R[action] + (self.discount * self.utility[action]))\n",
+    "        \n",
+    "        dist_chance = (1 - self.noise) / len(other_actions)\n",
+    "        \n",
+    "        for noise_action in other_actions:\n",
+    "            total_value += dist_chance * (self.R[noise_action] + (self.discount * self.utility[noise_action]))\n",
+    "        return total_value\n",
     "    \n",
     "    def _get_action_positions(self, current_pos: Tuple[int, int]):\n",
     "        \"\"\"\"\"\"\n",
     "        row, col = current_pos\n",
     "\n",
     "        up = (row - 1, col) if row - 1 >= 0 else current_pos\n",
-    "        right = (row, col + 1) if col + 1 <= self.R.shape[1] else current_pos\n",
+    "        right = (row, col + 1) if col + 1 < self.R.shape[1] else current_pos\n",
     "        left = (row, col -1) if col - 1 >= 0 else current_pos\n",
-    "        down = (row + 1, col) if row + 1 <= self.R.shape[0] else current_pos\n",
+    "        down = (row + 1, col) if row + 1 < self.R.shape[0] else current_pos\n",
     "        return up, right, left, down\n",
     "    \n",
-    "    def iterate_values(self, noise: float = 0.7):\n",
+    "    def value_iteration(self):\n",
     "        \"\"\"Value iteration method\"\"\"\n",
     "        delta = 0\n",
     "        new_utility = np.zeros(self.utility.shape)\n",
@@ -70,23 +78,26 @@
     "            for pos in positions:\n",
     "                # check if we are evaluating an end state\n",
     "                if pos in self.end_states:\n",
+    "                    # current position is an end-state so value is 0\n",
     "                    continue\n",
     "\n",
     "                # save the current value\n",
     "                value = self.utility[pos]\n",
     "                # \n",
     "                actions = self._get_action_positions(pos)\n",
-    "                print(pos, actions)\n",
-    "#                 for index, action in enumerate(actions):\n",
-    "#                     print(index, action)\n",
-    "#                     noise_actions = [x for x in actions if x != action]\n",
-    "#                 print()\n",
-    "                    \n",
-    "                    \n",
+    "                action_values = []\n",
+    "                for index, action in enumerate(actions):\n",
+    "                    noise_actions = actions[:index] + actions[index+1:]\n",
+    "                    action_values.append(self._calc_action_value(action, noise_actions))\n",
     "                \n",
-    "                \n",
-    "            print(new_utility)\n",
-    "            break\n",
+    "                # select the action with the highest utility\n",
+    "                highest_utility = max(action_values)\n",
+    "                new_utility[pos] = highest_utility\n",
+    "                # update the delta\n",
+    "                delta = max(delta, abs(value - highest_utility))\n",
+    "            \n",
+    "            self.utility = copy.deepcopy(new_utility)\n",
+    "            print(self.utility)\n",
     "        \n",
     "        # delta = max(delta, np.amax(new_utility))\n",
     "        \n",
@@ -126,7 +137,7 @@
     "maze = Maze(rewards, finish_positions)\n",
     "agent = Agent(start_position, maze)\n",
     "\n",
-    "maze.iterate_values()"
+    "maze.value_iteration()"
    ]
   },
   {
