--- a/assignment1/value_iteration.ipynb
+++ b/assignment1/value_iteration.ipynb
@@ -47,7 +47,7 @@
     "        self.discount = discount\n",
     "        self.threshold = threshold\n",
     "    \n",
-    "    def _calc_action_value(self, action, other_actions):\n",
+    "    def __calc_action_value(self, action, other_actions):\n",
     "        \"\"\"\"\"\"\n",
     "        total_value = self.noise * (self.R[action] + (self.discount * self.utility[action]))\n",
     "        \n",
@@ -57,7 +57,7 @@
     "            total_value += dist_chance * (self.R[noise_action] + (self.discount * self.utility[noise_action]))\n",
     "        return total_value\n",
     "    \n",
-    "    def _get_action_positions(self, current_pos: Tuple[int, int]):\n",
+    "    def __get_action_positions(self, current_pos: Tuple[int, int]):\n",
     "        \"\"\"\"\"\"\n",
     "        row, col = current_pos\n",
     "\n",
@@ -67,14 +67,16 @@
     "        down = (row + 1, col) if row + 1 < self.R.shape[0] else current_pos\n",
     "        return up, right, left, down\n",
     "    \n",
-    "    def value_iteration(self):\n",
+    "    def value_iteration(self, steps):\n",
     "        \"\"\"Value iteration method\"\"\"\n",
     "        delta = 0\n",
-    "        new_utility = np.zeros(self.utility.shape)\n",
+    "        step = 0\n",
     "        # get all positions in the grid\n",
     "        positions = [(i,j) for i in range(self.R.shape[0]) for j in range(self.R.shape[1])]\n",
     "        \n",
-    "        while delta < self.threshold:\n",
+    "        # while delta < self.threshold:\n",
+    "        while step < steps:\n",
+    "            new_utility = np.zeros(self.utility.shape)\n",
     "            for pos in positions:\n",
     "                # check if we are evaluating an end state\n",
     "                if pos in self.end_states:\n",
@@ -84,25 +86,25 @@
     "                # save the current value\n",
     "                value = self.utility[pos]\n",
     "                # \n",
-    "                actions = self._get_action_positions(pos)\n",
+    "                actions = self.__get_action_positions(pos)\n",
     "                action_values = []\n",
     "                for index, action in enumerate(actions):\n",
     "                    noise_actions = actions[:index] + actions[index+1:]\n",
-    "                    action_values.append(self._calc_action_value(action, noise_actions))\n",
+    "                    action_values.append(self.__calc_action_value(action, noise_actions))\n",
     "                \n",
     "                # select the action with the highest utility\n",
     "                highest_utility = max(action_values)\n",
-    "                new_utility[pos] = highest_utility\n",
+    "                new_utility[pos] = round(highest_utility, 1)\n",
     "                # update the delta\n",
     "                delta = max(delta, abs(value - highest_utility))\n",
     "            \n",
     "            self.utility = copy.deepcopy(new_utility)\n",
-    "            print(self.utility)\n",
-    "        \n",
-    "        # delta = max(delta, np.amax(new_utility))\n",
-    "        \n",
-    "        \n",
-    "        "
+    "            # print(delta)\n",
+    "            step += 1\n",
+    "            # print(self.utility)\n",
+    "    \n",
+    "    def show_policy(self):\n",
+    "        ..."
    ]
   },
   {
@@ -125,8 +127,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_position = (3, 2)\n",
-    "finish_positions = [(0, 3), (3, 0)]\n",
+    "start_state = (3, 2)\n",
+    "terminal_states = [(0, 3), (3, 0)]\n",
     "\n",
     "rewards = np.array([[-1, -1, -1, 40],\n",
     "                    [-1, -1, -10, -10],\n",
@@ -134,10 +136,12 @@
     "                    [10, -2, 0, -1]])\n",
     "\n",
     "# build maze and agent\n",
-    "maze = Maze(rewards, finish_positions)\n",
-    "agent = Agent(start_position, maze)\n",
+    "maze = Maze(rewards, terminal_states)\n",
+    "agent = Agent(start_state, maze)\n",
     "\n",
-    "maze.value_iteration()"
+    "maze.value_iteration(200)\n",
+    "maze.show_policy()\n",
+    "maze.utility"
    ]
   },
   {
