fixed delta rule and added formatted way of printing utilities

--- a/assignment1/value_iteration.ipynb
+++ b/assignment1/value_iteration.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "class Maze:\n",
     "    def __init__(self, R: np.ndarray, end: List[Tuple[int, int]],\n",
-    "                 noise: float = 0.7, discount: float = 0.9, threshold: float = 0.5):\n",
+    "                 noise: float = 0.7, discount: float = 0.9, threshold: float = 0.0001):\n",
     "        self.R = R\n",
     "        self.utility = np.zeros(R.shape)\n",
     "        self.end_states = end\n",
@@ -67,15 +67,14 @@
     "        down = (row + 1, col) if row + 1 < self.R.shape[0] else current_pos\n",
     "        return up, right, left, down\n",
     "    \n",
-    "    def value_iteration(self, steps):\n",
-    "        \"\"\"Value iteration method\"\"\"\n",
-    "        delta = 0\n",
-    "        step = 0\n",
+    "    def value_iteration(self):\n",
+    "        \"\"\"Value iteration method.\"\"\"\n",
+    "        delta = np.inf\n",
     "        # get all positions in the grid\n",
     "        positions = [(i,j) for i in range(self.R.shape[0]) for j in range(self.R.shape[1])]\n",
     "        \n",
-    "        # while delta < self.threshold:\n",
-    "        while step < steps:\n",
+    "        while delta > self.threshold:\n",
+    "            delta = 0\n",
     "            new_utility = np.zeros(self.utility.shape)\n",
     "            for pos in positions:\n",
     "                # check if we are evaluating an end state\n",
@@ -85,7 +84,7 @@
     "\n",
     "                # save the current value\n",
     "                value = self.utility[pos]\n",
-    "                # \n",
+    "                # get the next positions of all the actions that can be taken on the current positions\n",
     "                actions = self.__get_action_positions(pos)\n",
     "                action_values = []\n",
     "                for index, action in enumerate(actions):\n",
@@ -94,14 +93,21 @@
     "                \n",
     "                # select the action with the highest utility\n",
     "                highest_utility = max(action_values)\n",
-    "                new_utility[pos] = round(highest_utility, 1)\n",
+    "                new_utility[pos] = highest_utility\n",
     "                # update the delta\n",
     "                delta = max(delta, abs(value - highest_utility))\n",
     "            \n",
     "            self.utility = copy.deepcopy(new_utility)\n",
-    "            # print(delta)\n",
-    "            step += 1\n",
-    "            # print(self.utility)\n",
+    "    \n",
+    "    def show_utility(self):\n",
+    "        \"\"\"Prints the utility array to the screen.\"\"\"\n",
+    "        for row in range(self.utility.shape[0]):\n",
+    "            print(\"-------------------------------------\")\n",
+    "            out = \"| \"\n",
+    "            for col in range(self.utility.shape[1]):\n",
+    "                out += str(round(self.utility[(row, col)], 2)).ljust(6) + ' | '\n",
+    "            print(out)\n",
+    "        print(\"-------------------------------------\")\n",
     "    \n",
     "    def show_policy(self):\n",
     "        ..."
@@ -133,21 +139,29 @@
     "rewards = np.array([[-1, -1, -1, 40],\n",
     "                    [-1, -1, -10, -10],\n",
     "                    [-1, -1, -1, -1],\n",
-    "                    [10, -2, 0, -1]])\n",
+    "                    [10, -2, -1, -1]])\n",
     "\n",
     "# build maze and agent\n",
-    "maze = Maze(rewards, terminal_states)\n",
+    "maze = Maze(rewards, terminal_states, discount=0.9)\n",
     "agent = Agent(start_state, maze)\n",
     "\n",
-    "maze.value_iteration(200)\n",
-    "maze.show_policy()\n",
-    "maze.utility"
+    "maze.value_iteration()\n",
+    "maze.show_utility()\n",
+    "# maze.show_policy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aef03cca-a819-4546-8724-80f26967e6a1",
+   "metadata": {},
+   "source": [
+    "### Unittest"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb2139f-12d2-47d3-ab7d-7733a8642bfc",
+   "id": "12f7ce93-3936-4256-a1fd-8055f2fba340",
    "metadata": {},
    "outputs": [],
    "source": []
