--- a/assignment2/Model_Free_Prediction.ipynb
+++ b/assignment2/Model_Free_Prediction.ipynb
@@ -89,8 +89,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_episode_random(env: Maze, values: np.ndarray, discount: float):\n",
-    "    \"\"\"\"\"\"\n",
+    "def generate_episode_random(env: Maze, values: np.ndarray, discount: float, p_action: float):\n",
+    "    \"\"\"Generates an episode based on the random policy.\n",
+    "    \n",
+    "    Here the p_action is not being used, because the actions are already random and therefore it won't really matter if we take a wrong turn\n",
+    "    Furthermore the discount is not being used.\n",
+    "    Both these parameters are set in the function because API consistency\n",
+    "    \"\"\"\n",
     "    steps = []  # holds Tuples with the states, actions and rewards\n",
     "    pos = env.get_random_position()\n",
     "    \n",
@@ -98,7 +103,7 @@
     "    while pos not in env.end_states:\n",
     "\n",
     "        next_actions = env.get_next_action_positions(pos)\n",
-    "        # choose a random action and gather\n",
+    "        # choose a random action and get the reward for the action.\n",
     "        action = rd.choice(next_actions)\n",
     "        \n",
     "        reward = env.R[action]\n",
@@ -119,8 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_episode_optimal(env: Maze, values: np.ndarray, discount: float):\n",
-    "    \"\"\"\"\"\"\n",
+    "def generate_episode_optimal(env: Maze, values: np.ndarray, discount: float, p_action: float):\n",
+    "    \"\"\"Generates an episode based on the optimal policy.\"\"\"\n",
     "    steps = []  # holds Tuples with the states, actions and rewards\n",
     "    pos = env.get_random_position()\n",
     "    \n",
@@ -134,12 +139,17 @@
     "        for action in next_actions:\n",
     "            action_values.append(env.R[action] + (discount * values[action]))\n",
     "        \n",
-    "        # get the index of the max elements \n",
+    "        # get the index of the max elements\n",
     "        max_elem = max(action_values)\n",
     "        policy_actions = [act for i, act in zip(action_values, next_actions) if i == max_elem]\n",
     "        \n",
-    "        # choose a random action and gather\n",
+    "        # choose the desired action and check based on the p_action if the action is certain\n",
     "        action = rd.choice(policy_actions)\n",
+    "        if p_action < rd.random():\n",
+    "            # whoops, the desired action cannot be taken, so choose one of the others\n",
+    "            chosen_index = np.argmax(action_values)\n",
+    "            # remove the earlier chosen action and choose a random action\n",
+    "            action = rd.choice(next_actions[:chosen_index] + next_actions[chosen_index + 1:])\n",
     "        \n",
     "        reward = env.R[action]\n",
     "        steps.append((pos, action, reward))\n",
@@ -168,14 +178,14 @@
    "outputs": [],
    "source": [
     "def monte_carlo_policy_evaluation(env: Maze, values: np.ndarray, policy: callable, discount: float = 0.9,\n",
-    "                              n_episodes: int = 1000, p_action: float = 0.7):\n",
+    "                              n_episodes: int = 10000, p_action: float = 0.7):\n",
     "    \"\"\"\"\"\"\n",
     "    state_values = np.zeros(env.R.shape)\n",
     "    state_returns = defaultdict(list)\n",
     "\n",
     "    for _ in range(n_episodes):\n",
     "        # generate a new episode with a certain policy\n",
-    "        episode = policy(env, values, discount)\n",
+    "        episode = policy(env, values, discount, p_action)\n",
     "\n",
     "        G = 0\n",
     "        visited_states = []\n",
@@ -215,13 +225,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| -2.34  | 3.03   | 14.88  | 0.0    | \n",
+      "| 0.08   | 5.63   | 16.84  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 0.78   | 4.06   | 13.44  | 18.17  | \n",
+      "| 1.78   | 5.35   | 15.25  | 19.95  | \n",
       "-------------------------------------\n",
-      "| 1.04   | 3.15   | 3.75   | 3.1    | \n",
+      "| 3.64   | 3.09   | 3.83   | 2.16   | \n",
       "-------------------------------------\n",
-      "| 0.0    | 2.5    | -1.02  | -2.4   | \n",
+      "| 0.0    | 2.83   | -0.74  | -4.19  | \n",
       "-------------------------------------\n"
      ]
     }
@@ -242,13 +252,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| -0.49  | 3.95   | 14.65  | 0.0    | \n",
+      "| -0.4   | 4.83   | 17.22  | 0.0    | \n",
       "-------------------------------------\n",
-      "| -0.38  | -0.14  | 9.51   | 19.34  | \n",
+      "| 0.11   | 1.18   | 10.37  | 19.96  | \n",
       "-------------------------------------\n",
-      "| 3.94   | 0.15   | -0.26  | 1.07   | \n",
+      "| 3.57   | 0.8    | -0.6   | 0.24   | \n",
       "-------------------------------------\n",
-      "| 0.0    | 3.78   | -1.87  | -3.48  | \n",
+      "| 0.0    | 3.33   | -2.1   | -3.93  | \n",
       "-------------------------------------\n"
      ]
     }
@@ -279,19 +289,19 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 38.0   | 39.0   | 40.0   | 0.0    | \n",
+      "| 34.45  | 37.12  | 39.54  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 37.0   | 38.0   | 39.0   | 40.0   | \n",
+      "| 31.59  | 34.16  | 36.36  | 37.93  | \n",
       "-------------------------------------\n",
-      "| 36.0   | 37.0   | 36.0   | 30.0   | \n",
+      "| 27.69  | 31.49  | 28.85  | 26.69  | \n",
       "-------------------------------------\n",
-      "| 0.0    | 36.0   | 35.0   | 29.0   | \n",
+      "| 0.0    | 27.13  | 26.24  | 24.76  | \n",
       "-------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "optim_values1 = monte_carlo_policy_evaluation(maze, values, policy=generate_episode_optimal, discount=1.0, n_episodes=100)\n",
+    "optim_values1 = monte_carlo_policy_evaluation(maze, values, policy=generate_episode_optimal, discount=1.0)\n",
     "show_utility(optim_values1)"
    ]
   },
@@ -308,19 +318,19 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 30.5   | 35.0   | 40.0   | 0.0    | \n",
+      "| 24.56  | 32.18  | 39.52  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 26.45  | 30.5   | 35.0   | 40.0   | \n",
+      "| 18.98  | 24.25  | 29.25  | 36.56  | \n",
       "-------------------------------------\n",
-      "| 22.8   | 26.45  | 22.81  | 26.0   | \n",
+      "| 14.21  | 18.29  | 14.27  | 19.76  | \n",
       "-------------------------------------\n",
-      "| 0.0    | 22.8   | 19.52  | 22.4   | \n",
+      "| 0.0    | 12.84  | 10.62  | 14.18  | \n",
       "-------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "optim_values1 = monte_carlo_policy_evaluation(maze, values, policy=generate_episode_optimal, discount=0.9, n_episodes=100)\n",
+    "optim_values1 = monte_carlo_policy_evaluation(maze, values, policy=generate_episode_optimal, discount=0.9)\n",
     "show_utility(optim_values1)"
    ]
   },
@@ -339,23 +349,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def temporal_difference_learning(env: Maze, values: np.ndarray, policy: callable, step_size: float = 0.01,\n",
-    "                                 discount: float = 0.9, n_episodes: int = 1000):\n",
+    "def get_random_step(env: Maze, values: np.ndarray, pos: Tuple[int, int], discount: float, p_action: float):\n",
+    "    \"\"\"Picks the next action based on the current state and the random policy.\"\"\"\n",
+    "    next_actions = env.get_next_action_positions(pos)\n",
+    "    \n",
+    "    # choose a random action\n",
+    "    action = rd.choice(next_actions)\n",
+    "    reward = env.R[action]\n",
+    "    \n",
+    "    # return the current state, the action taken and the reward of the state after the action\n",
+    "    return pos, action, reward\n",
+    "\n",
+    "\n",
+    "def get_optimal_step(env: Maze, values: np.ndarray, pos: Tuple[int, int], discount: float, p_action: float):\n",
+    "    \"\"\"Picks the next action based on the current state and the optimal policy.\"\"\"\n",
+    "    \n",
+    "    # get the next action based on the optimal policy\n",
+    "    next_actions = env.get_next_action_positions(pos)\n",
+    "    action_values = []\n",
+    "    \n",
+    "    # calculate the value of the next actions based on the values calculated during the value iteration step\n",
+    "    for action in next_actions:\n",
+    "        action_values.append(env.R[action] + (discount * values[action]))\n",
+    "\n",
+    "    # get the index of the max elements \n",
+    "    max_elem = max(action_values)\n",
+    "    policy_actions = [act for i, act in zip(action_values, next_actions) if i == max_elem]\n",
+    "    \n",
+    "    # choose the desired action and check based on the p_action if the action is certain\n",
+    "    action = rd.choice(policy_actions)\n",
+    "    if p_action < rd.random():\n",
+    "        # whoops, the desired action cannot be taken, so choose one of the others\n",
+    "        chosen_index = np.argmax(action_values)\n",
+    "        # remove the earlier chosen action and choose a random action\n",
+    "        action = rd.choice(next_actions[:chosen_index] + next_actions[chosen_index + 1:])\n",
+    "\n",
+    "    # gather the reward of the taken action\n",
+    "    reward = env.R[action]\n",
+    "    \n",
+    "    return pos, action, reward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0ddaaad0-bda5-4660-82f8-01ae4284ea61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def temporal_difference_learning(env: Maze, values: np.ndarray, policy: callable, step_size: float = 0.1,\n",
+    "                                 discount: float = 0.9, n_episodes: int = 10000, p_action: float = 0.7):\n",
     "    \"\"\"\"\"\"\n",
     "    state_values = np.zeros(env.R.shape)\n",
     "\n",
     "    for _ in range(n_episodes):\n",
-    "        # generate a new episode with a certain policy\n",
-    "        episode = policy(env, values, discount)\n",
-    "        \n",
-    "        for pos, action, reward in episode:\n",
-    "            if pos in env.end_states:\n",
-    "                break\n",
-    "            else:\n",
-    "                value = state_values[pos]\n",
-    "                state_values[pos] = value + step_size * (reward + discount * state_values[action] - value)\n",
-    "    \n",
-    "    return state_values"
+    "        # get the random first position\n",
+    "        state = env.get_random_position()\n",
+    "\n",
+    "        while state not in env.end_states:\n",
+    "            \n",
+    "            # choose an action based on the policy\n",
+    "            state, action, reward = policy(env, values, state, discount, p_action)\n",
+    "            \n",
+    "            # update the value of the current_state\n",
+    "            state_values[state] = state_values[state] + step_size * (reward + discount * state_values[action] - state_values[state])\n",
+    "            \n",
+    "            # update the current state\n",
+    "            state = action\n",
+    "\n",
+    "    return state_values   "
    ]
   },
   {
@@ -368,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "03c534a7-ae4a-4542-9022-c06b5e1699df",
    "metadata": {},
    "outputs": [
@@ -377,25 +439,25 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| -6.87  | -3.7   | 6.37   | 0.0    | \n",
+      "| -14.3  | -9.42  | 2.55   | 0.0    | \n",
       "-------------------------------------\n",
-      "| -6.98  | -9.15  | -6.37  | 2.21   | \n",
+      "| -13.17 | -16.5  | -15.0  | -12.26 | \n",
       "-------------------------------------\n",
-      "| -1.86  | -6.91  | -11.35 | -10.87 | \n",
+      "| -5.68  | -12.05 | -19.58 | -22.13 | \n",
       "-------------------------------------\n",
-      "| 0.0    | -2.48  | -9.13  | -11.31 | \n",
+      "| 0.0    | -5.49  | -16.37 | -21.3  | \n",
       "-------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "random_values1 = temporal_difference_learning(maze, values, step_size=0.01, policy=generate_episode_random, discount=1.0)\n",
+    "random_values1 = temporal_difference_learning(maze, values, policy=get_random_step, discount=1.0, p_action=0.7)\n",
     "show_utility(random_values1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "3f170209-dc80-4ae8-8a56-c572b0baba94",
    "metadata": {},
    "outputs": [
@@ -404,19 +466,19 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| -4.45  | -1.92  | 7.16   | 0.0    | \n",
+      "| -5.9   | -5.26  | 9.49   | 0.0    | \n",
       "-------------------------------------\n",
-      "| -4.66  | -6.72  | -4.27  | 3.91   | \n",
+      "| -5.29  | -10.28 | -6.25  | -4.22  | \n",
       "-------------------------------------\n",
-      "| -1.05  | -5.08  | -8.23  | -7.8   | \n",
+      "| -2.07  | -7.98  | -10.52 | -11.14 | \n",
       "-------------------------------------\n",
-      "| 0.0    | -0.37  | -6.36  | -7.6   | \n",
+      "| 0.0    | -3.36  | -8.2   | -9.58  | \n",
       "-------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "random_values2 = temporal_difference_learning(maze, values, step_size=0.01, policy=generate_episode_random, discount=0.9)\n",
+    "random_values2 = temporal_difference_learning(maze, values, policy=get_random_step, discount=0.9, p_action=0.7)\n",
     "show_utility(random_values2)"
    ]
   },
@@ -430,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "741e77aa-2461-4145-b5c8-6e291b61545a",
    "metadata": {},
    "outputs": [
@@ -439,25 +501,25 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 21.01  | 38.42  | 39.96  | 0.0    | \n",
+      "| 33.81  | 34.59  | 34.38  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 7.45   | 33.47  | 15.24  | 35.0   | \n",
+      "| 29.91  | 31.19  | 32.73  | 29.18  | \n",
       "-------------------------------------\n",
-      "| 3.01   | 22.55  | 6.15   | 12.01  | \n",
+      "| 26.83  | 29.13  | 25.95  | 22.56  | \n",
       "-------------------------------------\n",
-      "| 0.0    | 4.57   | 0.26   | 1.5    | \n",
+      "| 0.0    | 25.21  | 25.11  | 24.19  | \n",
       "-------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "optim_values1 = temporal_difference_learning(maze, values, step_size=0.01, policy=generate_episode_optimal, discount=1.0)\n",
+    "optim_values1 = temporal_difference_learning(maze, values, policy=get_optimal_step, discount=1.0, p_action=0.7)\n",
     "show_utility(optim_values1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "788e0adf-9a98-4a46-a86d-c35de1600159",
    "metadata": {},
    "outputs": [
@@ -466,19 +528,19 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 15.11  | 34.39  | 39.95  | 0.0    | \n",
+      "| 23.23  | 26.64  | 34.47  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 5.92   | 26.75  | 10.76  | 34.19  | \n",
+      "| 15.81  | 18.11  | 26.54  | 32.73  | \n",
       "-------------------------------------\n",
-      "| 1.45   | 15.7   | 3.96   | 9.11   | \n",
+      "| 12.13  | 12.42  | 11.51  | 18.41  | \n",
       "-------------------------------------\n",
-      "| 0.0    | 2.13   | -0.16  | 0.69   | \n",
+      "| 0.0    | 10.28  | 9.65   | 15.24  | \n",
       "-------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "optim_values2 = temporal_difference_learning(maze, values, step_size=0.01, policy=generate_episode_optimal, discount=0.9)\n",
+    "optim_values2 = temporal_difference_learning(maze, values, policy=get_optimal_step, discount=0.9, p_action=0.7)\n",
     "show_utility(optim_values2)"
    ]
   }
