added latest docstrings

--- a/assignment2/Model_Free_Prediction.ipynb
+++ b/assignment2/Model_Free_Prediction.ipynb
@@ -32,7 +32,9 @@
    "cell_type": "markdown",
    "id": "8cb13a94-7c2f-4e6e-a870-b7ba6f5017dc",
    "metadata": {},
-   "source": []
+   "source": [
+    "Eerst wordt de environment, terminal states en de values van de value iteration geïnitialiseerd."
+   ]
   },
   {
    "cell_type": "code",
@@ -89,12 +91,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_episode_random(env: Maze, values: np.ndarray, discount: float, p_action: float):\n",
+    "def generate_episode_random(env: Maze, values: np.ndarray, discount: float, p_action: float) -> List[Tuple[Tuple[int, int], Tuple[int, int], int]]:\n",
     "    \"\"\"Generates an episode based on the random policy.\n",
     "    \n",
     "    Here the p_action is not being used, because the actions are already random and therefore it won't really matter if we take a wrong turn\n",
     "    Furthermore the discount is not being used.\n",
     "    Both these parameters are set in the function because API consistency\n",
+    "    \n",
+    "    args:\n",
+    "        env (Maze): The environment which holds the rewards of all the possible states.\n",
+    "        values (np.ndarray): The utility values of the states.\n",
+    "        discount (float): The discount factor.\n",
+    "        p_action (float): The probability of a succesfull action.        \n",
+    "\n",
+    "    returns:\n",
+    "        List[Tuple[Tuple[int, int], Tuple[int, int], int]]: Returns a list with all the state-action pairs with the corresponding rewards.\n",
     "    \"\"\"\n",
     "    steps = []  # holds Tuples with the states, actions and rewards\n",
     "    pos = env.get_random_position()\n",
@@ -124,8 +135,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_episode_optimal(env: Maze, values: np.ndarray, discount: float, p_action: float):\n",
-    "    \"\"\"Generates an episode based on the optimal policy.\"\"\"\n",
+    "def generate_episode_optimal(env: Maze, values: np.ndarray, discount: float, p_action: float) -> List[Tuple[Tuple[int, int], Tuple[int, int], int]]:\n",
+    "    \"\"\"Generates an episode based on the optimal policy.\n",
+    "\n",
+    "    args:\n",
+    "        env (Maze): The environment which holds the rewards of all the possible states.\n",
+    "        values (np.ndarray): The utility values of the states.\n",
+    "        discount (float): The discount factor.\n",
+    "        p_action (float): The probability of a succesfull action.        \n",
+    "\n",
+    "    returns:\n",
+    "        List[Tuple[Tuple[int, int], Tuple[int, int], int]]: Returns a list with all the state-action pairs with the corresponding rewards.\n",
+    "    \"\"\"\n",
     "    steps = []  # holds Tuples with the states, actions and rewards\n",
     "    pos = env.get_random_position()\n",
     "    \n",
@@ -178,8 +199,20 @@
    "outputs": [],
    "source": [
     "def monte_carlo_policy_evaluation(env: Maze, values: np.ndarray, policy: callable, discount: float = 0.9,\n",
-    "                              n_episodes: int = 10000, p_action: float = 0.7):\n",
-    "    \"\"\"\"\"\"\n",
+    "                              n_episodes: int = 10000, p_action: float = 0.7) -> np.ndarray:\n",
+    "    \"\"\"A function that uses monte carlo policy evaluation to get a value-function.\n",
+    "\n",
+    "    args:\n",
+    "        env (Maze): The environment which holds the rewards of all the possible states.\n",
+    "        values (np.ndarray): The utility values of the states.\n",
+    "        policy (callable): The policy that is used to generate an episode.\n",
+    "        discount (float, optional): The discount factor. Defaults to 0.9.\n",
+    "        n_episodes (int, optional): The amount of episodes to run. Defaults to 10000.\n",
+    "        p_action (float, optional): The probability of a succesfull action. Defaults to 0.7.        \n",
+    "\n",
+    "    returns:\n",
+    "        np.ndarray: Returns the calculated values per state.\n",
+    "    \"\"\"\n",
     "    state_values = np.zeros(env.R.shape)\n",
     "    state_returns = defaultdict(list)\n",
     "\n",
@@ -209,7 +242,8 @@
    "id": "cf4f336f-4141-4463-8a1a-371efe97f776",
    "metadata": {},
    "source": [
-    "#### MC Random policy"
+    "#### MC Random policy\n",
+    "met discount van 1.0"
    ]
   },
   {
@@ -225,13 +259,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 0.08   | 5.63   | 16.84  | 0.0    | \n",
+      "| -1.08  | 4.58   | 15.71  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 1.78   | 5.35   | 15.25  | 19.95  | \n",
+      "| 0.97   | 4.69   | 14.89  | 19.39  | \n",
       "-------------------------------------\n",
-      "| 3.64   | 3.09   | 3.83   | 2.16   | \n",
+      "| 2.98   | 3.61   | 4.5    | 2.62   | \n",
       "-------------------------------------\n",
-      "| 0.0    | 2.83   | -0.74  | -4.19  | \n",
+      "| 0.0    | 3.49   | -0.32  | -3.26  | \n",
       "-------------------------------------\n"
      ]
     }
@@ -239,6 +273,14 @@
    "source": [
     "random_values1 = monte_carlo_policy_evaluation(maze, values, policy=generate_episode_random, discount=1.0)\n",
     "show_utility(random_values1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7de0c295-35a4-4a76-8219-388129eb7d34",
+   "metadata": {},
+   "source": [
+    "met een discount van 0.9"
    ]
   },
   {
@@ -252,13 +294,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| -0.4   | 4.83   | 17.22  | 0.0    | \n",
+      "| -0.15  | 5.31   | 17.95  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 0.11   | 1.18   | 10.37  | 19.96  | \n",
+      "| 0.06   | 1.4    | 10.69  | 20.18  | \n",
       "-------------------------------------\n",
-      "| 3.57   | 0.8    | -0.6   | 0.24   | \n",
+      "| 3.71   | 1.24   | 0.07   | 0.87   | \n",
       "-------------------------------------\n",
-      "| 0.0    | 3.33   | -2.1   | -3.93  | \n",
+      "| 0.0    | 3.67   | -1.78  | -3.71  | \n",
       "-------------------------------------\n"
      ]
     }
@@ -273,7 +315,8 @@
    "id": "67b8d5cf-27a5-4a1f-b97d-d1c9fe230379",
    "metadata": {},
    "source": [
-    "#### MC Optimal policy"
+    "#### MC Optimal policy\n",
+    "met discount van 1.0"
    ]
   },
   {
@@ -289,13 +332,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 34.45  | 37.12  | 39.54  | 0.0    | \n",
+      "| 34.67  | 37.16  | 39.62  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 31.59  | 34.16  | 36.36  | 37.93  | \n",
+      "| 31.95  | 34.03  | 36.26  | 38.12  | \n",
       "-------------------------------------\n",
-      "| 27.69  | 31.49  | 28.85  | 26.69  | \n",
+      "| 27.3   | 31.03  | 28.51  | 27.06  | \n",
       "-------------------------------------\n",
-      "| 0.0    | 27.13  | 26.24  | 24.76  | \n",
+      "| 0.0    | 26.25  | 26.14  | 24.64  | \n",
       "-------------------------------------\n"
      ]
     }
@@ -303,6 +346,14 @@
    "source": [
     "optim_values1 = monte_carlo_policy_evaluation(maze, values, policy=generate_episode_optimal, discount=1.0)\n",
     "show_utility(optim_values1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a295c38-d3da-4b99-977c-274e99f4c4a2",
+   "metadata": {},
+   "source": [
+    "met discount van 0.9"
    ]
   },
   {
@@ -318,13 +369,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 24.56  | 32.18  | 39.52  | 0.0    | \n",
+      "| 24.15  | 32.26  | 39.54  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 18.98  | 24.25  | 29.25  | 36.56  | \n",
+      "| 18.83  | 24.27  | 29.12  | 36.7   | \n",
       "-------------------------------------\n",
-      "| 14.21  | 18.29  | 14.27  | 19.76  | \n",
+      "| 14.02  | 18.19  | 14.45  | 20.22  | \n",
       "-------------------------------------\n",
-      "| 0.0    | 12.84  | 10.62  | 14.18  | \n",
+      "| 0.0    | 13.05  | 11.1   | 15.09  | \n",
       "-------------------------------------\n"
      ]
     }
@@ -339,7 +390,8 @@
    "id": "24275c94-340b-4709-bbb4-b42c67d88d15",
    "metadata": {},
    "source": [
-    "### Temporal Difference Learning"
+    "### Temporal Difference Learning\n",
+    "#### functies voor het genereren van één stap met behulp van een policy"
    ]
   },
   {
@@ -349,8 +401,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_random_step(env: Maze, values: np.ndarray, pos: Tuple[int, int], discount: float, p_action: float):\n",
-    "    \"\"\"Picks the next action based on the current state and the random policy.\"\"\"\n",
+    "def get_random_step(env: Maze, values: np.ndarray, pos: Tuple[int, int], discount: float, p_action: float) -> Tuple[Tuple[int, int], int]:\n",
+    "    \"\"\"Picks the next action based on the current state and the random policy.\n",
+    "    \n",
+    "    args:\n",
+    "        env (Maze): The environment which holds the rewards of all the possible states.\n",
+    "        values (np.ndarray): The urrent values of the states in the env.\n",
+    "        pos (Tuple[int, int]): The current position from which an action should be taken.\n",
+    "        discount (float): The discount factor.\n",
+    "        p_action (float): The probability of a succesfull action.\n",
+    "\n",
+    "    returns:\n",
+    "        Tuple[Tuple[int, int], int]: A tuple with the action and corresponding reward of the next step.\n",
+    "    \n",
+    "    \"\"\"\n",
     "    next_actions = env.get_next_action_positions(pos)\n",
     "    \n",
     "    # choose a random action\n",
@@ -358,12 +422,22 @@
     "    reward = env.R[action]\n",
     "    \n",
     "    # return the current state, the action taken and the reward of the state after the action\n",
-    "    return pos, action, reward\n",
+    "    return action, reward\n",
     "\n",
     "\n",
-    "def get_optimal_step(env: Maze, values: np.ndarray, pos: Tuple[int, int], discount: float, p_action: float):\n",
-    "    \"\"\"Picks the next action based on the current state and the optimal policy.\"\"\"\n",
-    "    \n",
+    "def get_optimal_step(env: Maze, values: np.ndarray, pos: Tuple[int, int], discount: float, p_action: float) -> Tuple[Tuple[int, int], int]:\n",
+    "    \"\"\"Picks the next action based on the current state and the optimal policy.\n",
+    "\n",
+    "    args:\n",
+    "        env (Maze): The environment which holds the rewards of all the possible states.\n",
+    "        values (np.ndarray): The urrent values of the states in the env.\n",
+    "        pos (Tuple[int, int]): The current position from which an action should be taken.\n",
+    "        discount (float): The discount factor.\n",
+    "        p_action (float): The probability of a succesfull action.\n",
+    "\n",
+    "    returns:\n",
+    "        Tuple[Tuple[int, int], int]: A tuple with the action and corresponding reward of the next step.\n",
+    "    \"\"\"\n",
     "    # get the next action based on the optimal policy\n",
     "    next_actions = env.get_next_action_positions(pos)\n",
     "    action_values = []\n",
@@ -387,7 +461,7 @@
     "    # gather the reward of the taken action\n",
     "    reward = env.R[action]\n",
     "    \n",
-    "    return pos, action, reward"
+    "    return action, reward"
    ]
   },
   {
@@ -398,8 +472,21 @@
    "outputs": [],
    "source": [
     "def temporal_difference_learning(env: Maze, values: np.ndarray, policy: callable, step_size: float = 0.1,\n",
-    "                                 discount: float = 0.9, n_episodes: int = 10000, p_action: float = 0.7):\n",
-    "    \"\"\"\"\"\"\n",
+    "                                 discount: float = 0.9, n_episodes: int = 10000, p_action: float = 0.7) -> np.ndarray:\n",
+    "    \"\"\"A function that uses temporal difference learning to get a value-function.\n",
+    "\n",
+    "    args:\n",
+    "        env (Maze): The environment which holds the rewards of all the possible states.\n",
+    "        values (np.ndarray): The utility values of the states.\n",
+    "        policy (callable): The policy that is used to take a step.\n",
+    "        step_size (float, optional): The size of the step in a particular direction. Defaults to 0.1.\n",
+    "        discount (float, optional): The discount factor. Defaults to 0.9.\n",
+    "        n_episodes (int, optional): The amount of episodes to run. Defaults to 10000.\n",
+    "        p_action (float, optional): The probability of a succesfull action. Defaults to 0.7.        \n",
+    "\n",
+    "    returns:\n",
+    "        np.ndarray: Returns the calculated values per state.\n",
+    "    \"\"\"\n",
     "    state_values = np.zeros(env.R.shape)\n",
     "\n",
     "    for _ in range(n_episodes):\n",
@@ -409,7 +496,7 @@
     "        while state not in env.end_states:\n",
     "            \n",
     "            # choose an action based on the policy\n",
-    "            state, action, reward = policy(env, values, state, discount, p_action)\n",
+    "            action, reward = policy(env, values, state, discount, p_action)\n",
     "            \n",
     "            # update the value of the current_state\n",
     "            state_values[state] = state_values[state] + step_size * (reward + discount * state_values[action] - state_values[state])\n",
@@ -425,7 +512,8 @@
    "id": "517497cd-54f9-4c55-b278-bbdf1d7beb68",
    "metadata": {},
    "source": [
-    "#### TD Random policy"
+    "#### TD Random policy\n",
+    "met discount van 1.0"
    ]
   },
   {
@@ -439,13 +527,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| -14.3  | -9.42  | 2.55   | 0.0    | \n",
+      "| -12.29 | -7.47  | 12.7   | 0.0    | \n",
       "-------------------------------------\n",
-      "| -13.17 | -16.5  | -15.0  | -12.26 | \n",
+      "| -8.98  | -12.05 | -4.19  | 1.81   | \n",
       "-------------------------------------\n",
-      "| -5.68  | -12.05 | -19.58 | -22.13 | \n",
+      "| 0.08   | -9.95  | -15.47 | -16.26 | \n",
       "-------------------------------------\n",
-      "| 0.0    | -5.49  | -16.37 | -21.3  | \n",
+      "| 0.0    | -6.55  | -15.36 | -16.77 | \n",
       "-------------------------------------\n"
      ]
     }
@@ -453,6 +541,14 @@
    "source": [
     "random_values1 = temporal_difference_learning(maze, values, policy=get_random_step, discount=1.0, p_action=0.7)\n",
     "show_utility(random_values1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e248dab-8a14-46a5-bec5-f8690104c60e",
+   "metadata": {},
+   "source": [
+    "met discount van 0.9"
    ]
   },
   {
@@ -466,13 +562,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| -5.9   | -5.26  | 9.49   | 0.0    | \n",
+      "| -5.24  | -4.01  | 5.58   | 0.0    | \n",
       "-------------------------------------\n",
-      "| -5.29  | -10.28 | -6.25  | -4.22  | \n",
+      "| -4.26  | -6.12  | -4.13  | 2.63   | \n",
       "-------------------------------------\n",
-      "| -2.07  | -7.98  | -10.52 | -11.14 | \n",
+      "| 0.94   | -5.43  | -7.98  | -9.52  | \n",
       "-------------------------------------\n",
-      "| 0.0    | -3.36  | -8.2   | -9.58  | \n",
+      "| 0.0    | 0.07   | -6.96  | -8.29  | \n",
       "-------------------------------------\n"
      ]
     }
@@ -487,7 +583,8 @@
    "id": "113fe73a-dae8-4366-a265-89216b3a4325",
    "metadata": {},
    "source": [
-    "#### TD Optimal policy"
+    "#### TD Optimal policy\n",
+    "met discount van 1.0"
    ]
   },
   {
@@ -501,13 +598,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 33.81  | 34.59  | 34.38  | 0.0    | \n",
+      "| 32.43  | 35.68  | 36.91  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 29.91  | 31.19  | 32.73  | 29.18  | \n",
+      "| 30.78  | 33.3   | 32.16  | 33.67  | \n",
       "-------------------------------------\n",
-      "| 26.83  | 29.13  | 25.95  | 22.56  | \n",
+      "| 26.33  | 29.91  | 27.49  | 24.72  | \n",
       "-------------------------------------\n",
-      "| 0.0    | 25.21  | 25.11  | 24.19  | \n",
+      "| 0.0    | 27.91  | 25.26  | 23.92  | \n",
       "-------------------------------------\n"
      ]
     }
@@ -515,6 +612,14 @@
    "source": [
     "optim_values1 = temporal_difference_learning(maze, values, policy=get_optimal_step, discount=1.0, p_action=0.7)\n",
     "show_utility(optim_values1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04a9161e-c94a-4ec4-abf6-d2ba71204ba3",
+   "metadata": {},
+   "source": [
+    "met discount van 0.9"
    ]
   },
   {
@@ -528,13 +633,13 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "| 23.23  | 26.64  | 34.47  | 0.0    | \n",
+      "| 21.64  | 27.9   | 35.24  | 0.0    | \n",
       "-------------------------------------\n",
-      "| 15.81  | 18.11  | 26.54  | 32.73  | \n",
+      "| 15.78  | 20.36  | 25.46  | 32.71  | \n",
       "-------------------------------------\n",
-      "| 12.13  | 12.42  | 11.51  | 18.41  | \n",
+      "| 12.41  | 14.79  | 13.21  | 18.11  | \n",
       "-------------------------------------\n",
-      "| 0.0    | 10.28  | 9.65   | 15.24  | \n",
+      "| 0.0    | 11.21  | 9.75   | 13.01  | \n",
       "-------------------------------------\n"
      ]
     }
